infrastructure/overlays/staging/traefik/traefik-basicauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth
