infrastructure/overlays/staging/traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: traefik
  name: traefik-dashboard-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-traefik-dashboard-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
